--- a/homeworks/src/p2-homeworks/h5-rrd-v6/Header.module.css
+++ b/homeworks/src/p2-homeworks/h5-rrd-v6/Header.module.css
@@ -4,7 +4,17 @@
     position: center;
 
 }
+
 .navLinksPreJun {
+    color: black;
+    margin: 3px;
+    padding: 3px;
+    display: inline-block;
+    background: whitesmoke;
+
+}
+
+.navLinksJun {
     color: black;
     margin: 3px;
     padding: 3px;
@@ -12,20 +22,19 @@
     background: yellow;
 
 }
-.navLinksJun {
-    color: black;
-    margin: 3px;
-    padding: 3px;
-    display: inline-block;
-    background: orange;
 
-}
 .navLinksJunPlus {
     color: whitesmoke;
     margin: 3px;
     padding: 3px;
     display: inline-block;
-    background: red;
+    background: chartreuse;
 
 
+}
+.isActive {
+    color: blueviolet;
+}
+.notActive {
+    color: black;
 }
